--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -36,6 +36,7 @@
 </div> 
 <% } %>
 
+<% if (pages > 1) { %> 
 <nav aria-label='pagination'>
   <ul class='pagination justify-content-center'>
 
@@ -49,7 +50,7 @@
 
   </ul>
 </nav>
-
+<% } %>
 </div>
 
 <script>
