--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -55,7 +55,7 @@
 
     </form>
     <div class='text-center'>
-    <a href='/campgrounds' class='btn btn-primary'>Back to All Campgrounds</a>
+    <a href='/campgrounds/pages/1' class='btn btn-primary'>Back to All Campgrounds</a>
     </div>
   </div>
 </div>
