--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
 
         <nav class='nav mx-auto mx-sm-0 ms-sm-auto'>
           <a class='nav-link active' href='/'>Home</a>
-          <a class='nav-link' href='/campgrounds'>Campgrounds</a>
+          <a class='nav-link' href='/campgrounds/pages/1'>Campgrounds</a>
           <% if(!currentUser) { %>
             <a class='nav-link' href='/login'>Login</a>
             <a class='nav-link' href='/signup'>Sign Up</a>
@@ -48,7 +48,7 @@
         Welcome to CampSite! <br> Explore our various campgrounds, share <br> some of your own and comment on others! <br> Find your next adventure here!
       </p>
       
-      <a href='/campgrounds' class='btn btn-lg btn-secondary font-weight-bold border-white bg-white'>
+      <a href='/campgrounds/pages/1' class='btn btn-lg btn-secondary font-weight-bold border-white bg-white'>
         View Campgrounds
       </a>
     </main>
