--- a/views/users/noSubmissions.ejs
+++ b/views/users/noSubmissions.ejs
@@ -23,7 +23,7 @@
     <main class='p-5 mt-5 mt-auto'>
       <h2 class='mb-4'><%= type === 'campgrounds' ? 'You have no Campgrounds.' : 'You have no Reviews.' %></h2>
 
-      <a href='<%= type==='campgrounds' ? '/campgrounds/new' : '/campgrounds' %>' class='btn btn-lg btn-secondary font-weight-bold border-white bg-white'>
+      <a href='<%= type==='campgrounds' ? '/campgrounds/new' : '/campgrounds/pages/1' %>' class='btn btn-lg btn-secondary font-weight-bold border-white bg-white'>
         <%= type==='campgrounds' ? 'Add a Campground!' : 'Review a Campground!' %>
       </a>
       
