--- a/views/users/showCampgrounds.ejs
+++ b/views/users/showCampgrounds.ejs
@@ -34,16 +34,40 @@
     <% } %>
   </div>
 
-  <% if (pages > 1) { %> 
-  <nav aria-label='pagination'>
-    <ul class='pagination justify-content-center'>
-      <% for (let i=0; i < pages; i++) { %>
-        <li class='page-item'>
-          <a class='page-link' href='/users/<%= currentUser._id %>/campgrounds/pages/<%= i+1 %> '>
-            <%= i+1 %>
-          </a>
-        </li>
-      <% } %>
+  <% if (pages > 1) { %>
+    <nav aria-label='pagination'>
+      <ul class='pagination justify-content-center'>
+        
+        <% if (current == 1) { %>
+          <li class='page-item disabled'><a class='page-link'>First</a></li>
+        <% } else { %>
+          <li class='page-item'><a href='/users/<%= currentUser._id %>/campgrounds/pages/1' class='page-link'>First</a></li>
+        <% } %>
+  
+        <% let i = (current > 5 ? current - 4 : 1) %>
+        <% if (i != 1) { %>
+          <li class='page-item disabled'><a class='page-link'>...</a></li>
+        <% } %>
+  
+        <% for (; i < current + 4 && i <= pages; i++) { %>
+          <li class='page-item <%= i == current ? ' active' : '' %>'>
+            <a class='page-link' href='/users/<%= currentUser._id %>/campgrounds/pages/<%= i %>'>
+              <%= i %>
+            </a>
+          </li>
+        <% } %>
+  
+        <% if (i == current + 4 && i < pages) { %>
+          <li class='page-item disabled'><a class='page-link'>...</a></li>
+        <% } %>
+  
+        <% if (current == pages) { %>
+          <li class='page-item disabled'><a class='page-link'>Last</a></li>
+        <% } else { %>
+          <li class='page-item'>
+            <a href='/users/<%= currentUser._id %>/campgrounds/pages/<%= pages %>' class='page-link'>Last</a></li>
+        <% } %>
+  
     </ul>
   </nav>
   <% } %>
