--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
     <header class='mb-auto'>
 
       <div class='d-flex align-items-center'>
-        <h3 class='navbar-brand d-none d-sm-block'>CampSite</h3>
+        <h3 class='navbar-brand d-none d-sm-block'><i class="fa-solid fa-signs-post"></i> CampSite</h3>
 
         <nav class='nav mx-auto mx-sm-0 ms-sm-auto'>
           <a class='nav-link active' href='/'>Home</a>
