--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,21 +1,28 @@
 <% layout('layouts/boilerplate') %>
-<div id='cluster-map'></div>
+<div id='cluster-map' class='mb-3'></div>
 
-<div class='text-center'>
-  <h1 class='my-3'><%= campgrounds.length > 0 ? 'All Campgrounds' : 'No Campgrounds Yet' %> </h1>
-</div>
+<% if (!campgrounds.length) { %>
+  <div class='text-center'>
+    <h1>
+      No Campgrounds Yet
+    </h1>
+  </div>
+<% } %> 
 
-<div class='wrapper'>
+<div class='wrapper row my-5 justify-content-center'>
 
 <% for (let campground of campgrounds) {%>
+  <div class='col-12 col-lg-6 col-xxl-4'>
+
+  
 <div class='card mb-3 shadow'>
-  <div class='row'>
+  <!-- <div class='row'> -->
 
-    <div class='col-lg-4 my-auto'>
+    <!-- <div class='col-6 my-auto'> -->
       <img class='img-fluid' src='<%= campground.images.length ? campground.images[0].url : 'https://images.unsplash.com/photo-1510672981848-a1c4f1cb5ccf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2372&q=80' %>'>
-    </div>
+    <!-- </div> -->
 
-    <div class='col-lg-8'>
+    <!-- <div class='col-6'> -->
       <div class='card-body'>
         <h4 class='card-title'>
           <%= campground.title %>
@@ -30,10 +37,11 @@
           View <%= campground.title %>
         </a>
       </div>
-    </div>
+    <!-- </div> -->
 
-  </div>
+  <!-- </div> -->
 </div> 
+</div>
 <% } %>
 
 <% if (pages > 1) { %> 
