--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class='navbar sticky-top navbar-expand-lg navbar-dark bg-dark'>
   <div class='nav-container container-fluid'>
-    <a class='navbar-brand' href='/'> CampSite </a>
+    <a class='navbar-brand' href='/'><i class="fa-solid fa-signs-post"></i> CampSite </a>
     <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarNavAltMarkup'
       aria-controls='navbarNavAltMarkup' aria-expanded='false' aria-label='Toggle navigation'>
       <span class='navbar-toggler-icon'></span>
