--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,13 +26,46 @@ body {
 }
 
 .review-tag {
-  background-color: #0dcaf0;
+  /* background-color: #0dcaf0; */
+  background-color: #ffdb93;
 }
 
 .created-footer {
-  background-color: #aaf0d1;
+  background-color: #c7f5e1;
 }
 
 .form-check-inline {
   margin: 0 0.1em 0 0.5em;
+}
+
+.btn-primary,
+.btn-success {
+  background-color: #aaf0d1;
+  border-color: #aaf0d1;
+  color: #000;
+}
+
+.btn-primary:hover,
+.btn-primary:active,
+.btn-success:hover,
+.btn-success:active {
+  background-color: #77e7b4;
+  border-color: #77e7b4;
+  color: #000;
+  box-shadow: none;
+  outline: none;
+}
+
+.btn-info {
+  background-color: #ffc759;
+  border-color: #ffc759;
+  color: #000;
+}
+
+.btn-info:hover,
+.btn-info:active {
+  background-color: #ffb726;
+  border-color: #ffb726;
+  color: #000;
+  box-shadow: none;
 }
