--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -74,7 +74,7 @@
       <hr class='my-4'>
 
       <div class='d-grid mb-3'>
-        <button class='btn btn-info'>Update Campground</button>
+        <button class='btn btn-success'>Update Campground</button>
       </div>
     </form>
     <div class='text-center'>
