add github link

--- a/views/users/noSubmissions.ejs
+++ b/views/users/noSubmissions.ejs
@@ -30,7 +30,7 @@
     </main>
 
     <footer class='mt-auto text-white-50'>
-      <a href='https://github.com/kaquino1' class='text-muted text-decoration-none fs-5'>
+      <a href='https://github.com/kaquino1/campsite' class='text-muted text-decoration-none fs-5'>
         <i class='fa-brands fa-github'></i> GitHub
       </a>
     </footer>
