--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -23,7 +23,7 @@
             </a>
             <ul class='dropdown-menu dropdown-menu-dark' aria-labelledby='navDropdown'>
               <li><a class='dropdown-item' href='/users/<%= currentUser._id %>/campgrounds'>My Campgrounds</a></li>
-              <li><a class='dropdown-item' href='/users/<%= currentUser._id %>/reviews'>My Reviewed Campgrounds</a></li>
+              <li><a class='dropdown-item' href='/users/<%= currentUser._id %>/reviews'>My Reviews</a></li>
             </ul>
           </div>
             <a class='nav-link' href='/logout'>Logout</a>
