--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,8 +3,14 @@ body {
 }
 
 .wrapper {
-  max-width: 80vw;
+  max-width: 90vw;
   margin: auto;
+}
+
+@media screen and (min-width: 992px) {
+  .wrapper {
+    max-width: 80vw;
+  }
 }
 
 .nav-container {
