--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -19,7 +19,7 @@
   <!-- <div class='row'> -->
 
     <!-- <div class='col-6 my-auto'> -->
-      <img class='img-fluid' src='<%= campground.images.length ? campground.images[0].url : 'https://images.unsplash.com/photo-1510672981848-a1c4f1cb5ccf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2372&q=80' %>'>
+      <img class='img-fluid card-img-top' src='<%= campground.images.length ? campground.images[0].url : 'https://images.unsplash.com/photo-1510672981848-a1c4f1cb5ccf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2372&q=80' %>'>
     <!-- </div> -->
 
     <!-- <div class='col-6'> -->
