--- a/views/users/showCampgrounds.ejs
+++ b/views/users/showCampgrounds.ejs
@@ -26,7 +26,7 @@
           </div>
 
           <div class='card-footer created-footer'>
-            Created by <%= currentUser.username %>
+            Submitted by <%= currentUser.username %>
           </div>
 
         </div>
