--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,35 +5,36 @@
 <div class='wrapper row'>
   <div class='col-lg-6 mb-3 mb-lg-0'>
 
-    <div id='campgroundCarousel' class='carousel slide' data-bs-ride='carousel'>
-      <div class='carousel-inner'>
-        <% campground.images.forEach((img, i) => { %>
-          <div class='carousel-item <%= i === 0 ? 'active' : '' %>'>
-            <img src='<%= img.url%>' class='d-block w-100' alt=''>
-          </div>
-        <% }) %>
-
-        <% if(!campground.images.length) { %>
-          <div class='carousel-item active'>
-            <img src='https://images.unsplash.com/photo-1510672981848-a1c4f1cb5ccf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2372&q=80' class='d-block w-100' alt=''>
-          </div>
-        <% } %>
+    <div class='card shadow'>
+      <div id='campgroundCarousel' class='carousel slide' data-bs-ride='carousel'>
+        <div class='carousel-inner'>
+          <% campground.images.forEach((img, i)=> { %>
+            <div class='carousel-item <%= i === 0 ? ' active' : '' %>'>
+              <img src='<%= img.url%>' class='d-block w-100' alt=''>
+            </div>
+            <% }) %>
+      
+              <% if(!campground.images.length) { %>
+                <div class='carousel-item active'>
+                  <img
+                    src='https://images.unsplash.com/photo-1510672981848-a1c4f1cb5ccf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2372&q=80'
+                    class='d-block w-100' alt=''>
+                </div>
+                <% } %>
+        </div>
+      
+        <% if(campground.images.length> 1) { %>
+          <button class='carousel-control-prev' type='button' data-bs-target='#campgroundCarousel' data-bs-slide='prev'>
+            <span class='carousel-control-prev-icon' aria-hidden='true'></span>
+            <span class='visually-hidden'>Previous</span>
+          </button>
+          <button class='carousel-control-next' type='button' data-bs-target='#campgroundCarousel' data-bs-slide='next'>
+            <span class='carousel-control-next-icon' aria-hidden='true'></span>
+            <span class='visually-hidden'>Next</span>
+          </button>
+          <% } %>
       </div>
 
-      <% if(campground.images.length> 1) { %>
-        <button class='carousel-control-prev' type='button' data-bs-target='#campgroundCarousel' data-bs-slide='prev'>
-          <span class='carousel-control-prev-icon' aria-hidden='true'></span>
-          <span class='visually-hidden'>Previous</span>
-        </button>
-        <button class='carousel-control-next' type='button' data-bs-target='#campgroundCarousel' data-bs-slide='next'>
-          <span class='carousel-control-next-icon' aria-hidden='true'></span>
-          <span class='visually-hidden'>Next</span>
-        </button>
-      <% } %>
-    </div>
-    
-    <div class='card shadow'>
-      <img src='<%= campground.image %>' class='card-img-top'>
       <div class='card-body'>
         <h4 class='card-title'><%= campground.title %></h4>
         <h6 class='card-subtitle mb-3'><%= campground.location %></h6>
