--- a/views/users/showReviews.ejs
+++ b/views/users/showReviews.ejs
@@ -7,7 +7,7 @@
       <div class='col-12 col-lg-6 col-xxl-4'>
         
         <div class='card mb-3 shadow'>
-          <img src='<%= review.campground.images.length ? review.campground.images[0].url : 'https://images.unsplash.com/photo-1510672981848-a1c4f1cb5ccf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2372&q=80' %>' class='img-fluid'>
+          <img src='<%= review.campground.images.length ? review.campground.images[0].url : 'https://images.unsplash.com/photo-1510672981848-a1c4f1cb5ccf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2372&q=80' %>' class='img-fluid card-img-top'>
 
           <div class='card-body'>
 
