--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -51,7 +51,7 @@
     <% if (current == 1) { %>
       <li class='page-item disabled'><a class='page-link'>First</a></li>
     <% } else { %>
-        <li class='page-item'><a href='/campgrounds/pages/1' class='page-link'>First</a></li>
+        <li class='page-item'><a href='/campgrounds?page=1' class='page-link'>First</a></li>
     <% } %>
 
     <% let i = (current > 5 ? current - 4 : 1) %>
@@ -61,7 +61,7 @@
 
     <% for (; i < current + 4 && i <= pages; i++) { %>
       <li class='page-item <%= i == current ? 'active' : '' %>'>
-        <a class='page-link' href='/campgrounds/pages/<%= i %> '>
+        <a class='page-link' href='/campgrounds?page=<%= i %> '>
           <%= i %>
         </a>
       </li>
@@ -74,7 +74,7 @@
     <% if (current == pages) { %>
       <li class='page-item disabled'><a class='page-link'>Last</a></li>
     <% } else { %>
-      <li class='page-item'><a href='/campgrounds/pages/<%= pages %>' class='page-link'>Last</a></li>
+      <li class='page-item'><a href='/campgrounds?page=<%= pages %>' class='page-link'>Last</a></li>
     <% } %>
 
   </ul>
