--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -60,7 +60,7 @@
     </div>
     </div>
     <div class='text-center mt-5'>
-    <a href='/campgrounds/pages/1' class='btn btn-primary'>Back to All Campgrounds</a>
+    <a href='/campgrounds' class='btn btn-primary'>Back to All Campgrounds</a>
     </div>
   
   </div>
