--- a/views/users/showCampgrounds.ejs
+++ b/views/users/showCampgrounds.ejs
@@ -41,7 +41,7 @@
         <% if (current == 1) { %>
           <li class='page-item disabled'><a class='page-link'>First</a></li>
         <% } else { %>
-          <li class='page-item'><a href='/users/<%= currentUser._id %>/campgrounds/pages/1' class='page-link'>First</a></li>
+          <li class='page-item'><a href='/users/<%= currentUser._id %>/campgrounds' class='page-link'>First</a></li>
         <% } %>
   
         <% let i = (current > 5 ? current - 4 : 1) %>
@@ -51,7 +51,7 @@
   
         <% for (; i < current + 4 && i <= pages; i++) { %>
           <li class='page-item <%= i == current ? ' active' : '' %>'>
-            <a class='page-link' href='/users/<%= currentUser._id %>/campgrounds/pages/<%= i %>'>
+            <a class='page-link' href='/users/<%= currentUser._id %>/campgrounds?page=<%= i %>'>
               <%= i %>
             </a>
           </li>
@@ -65,7 +65,7 @@
           <li class='page-item disabled'><a class='page-link'>Last</a></li>
         <% } else { %>
           <li class='page-item'>
-            <a href='/users/<%= currentUser._id %>/campgrounds/pages/<%= pages %>' class='page-link'>Last</a></li>
+            <a href='/users/<%= currentUser._id %>/campgrounds?page=<%= pages %>' class='page-link'>Last</a></li>
         <% } %>
   
     </ul>
