--- a/views/users/showReviews.ejs
+++ b/views/users/showReviews.ejs
@@ -45,7 +45,7 @@
       <% if (current==1) { %>
         <li class='page-item disabled'><a class='page-link'>First</a></li>
         <% } else { %>
-          <li class='page-item'><a href='/users/<%= currentUser._id %>/reviews/pages/1' class='page-link'>First</a></li>
+          <li class='page-item'><a href='/users/<%= currentUser._id %>/reviews?page=1' class='page-link'>First</a></li>
         <% } %>
 
       <% let i=(current> 5 ? current - 4 : 1) %>
@@ -55,7 +55,7 @@
 
       <% for (; i < current + 4 && i <=pages; i++) { %>
         <li class='page-item <%= i == current ? ' active' : '' %>'>
-          <a class='page-link' href='/users/<%= currentUser._id %>/reviews/pages/<%= i %>'>
+          <a class='page-link' href='/users/<%= currentUser._id %>/reviews?page=<%= i %>'>
             <%= i %>
           </a>
         </li>
@@ -69,7 +69,7 @@
         <li class='page-item disabled'><a class='page-link'>Last</a></li>
       <% } else { %>
         <li class='page-item'>
-          <a href='/users/<%= currentUser._id %>/reviews/pages/<%= pages %>' class='page-link'>Last</a></li>
+          <a href='/users/<%= currentUser._id %>/reviews?page=<%= pages %>' class='page-link'>Last</a></li>
       <% } %>
 
     </ul>
